--- a/app/src/main/res/layout/fragment_build.xml
+++ b/app/src/main/res/layout/fragment_build.xml
@@ -1,13 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.rnb.install.buildcalculator.BuildFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Create ListView -->
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/buildslist">
+        <!-- add an animation here eventually -->
 
-</FrameLayout>
+    </ListView>
+
+
+</LinearLayout>
