--- a/app/src/main/res/layout/fragment_class.xml
+++ b/app/src/main/res/layout/fragment_class.xml
@@ -18,7 +18,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        //app:srcCompat="@drawable/game"
+        <!-- app:srcCompat="@drawable/game" -->
         android:id="@+id/itemImage"
         android:adjustViewBounds="true"
         android:padding="20dp"/>
