--- a/app/src/main/res/layout/fragment_class_content.xml
+++ b/app/src/main/res/layout/fragment_class_content.xml
@@ -11,7 +11,7 @@
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rulecontent">
+        android:id="@+id/classcontent">
     </android.support.v4.view.ViewPager>
 
     <ImageButton
