--- a/app/src/main/res/layout/fragment_create_build.xml
+++ b/app/src/main/res/layout/fragment_create_build.xml
@@ -1,13 +1,110 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:columnCount="2"
     tools:context="com.rnb.install.buildcalculator.CreateBuildFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buildNameLabel"
+        android:layout_column="0"
+        android:textSize="22sp"
+        android:layout_row="0" />
 
-</FrameLayout>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/buildName"
+        android:layout_column="1"
+        android:layout_row="0" />
+
+    <TextView
+        android:text="Weapon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/weaponLabel"
+        android:layout_column="0"
+        android:textSize="22sp"
+        android:layout_row="1" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/weaponName"
+        android:layout_column="1"
+        android:layout_row="1" />
+
+    <TextView
+        android:text="Gear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gearLabel"
+        android:layout_column="0"
+        android:textSize="22sp"
+        android:layout_row="2" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/gearName"
+        android:layout_column="1"
+        android:layout_row="2" />
+
+    <TextView
+        android:text="PLACEHOLDER"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/placeholderLabel"
+        android:layout_columnSpan="1"
+        android:layout_column="0"
+        android:textSize="22sp"
+        android:layout_row="3" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberSigned|numberDecimal"
+        android:ems="10"
+        android:id="@+id/placeholderName"
+        android:layout_column="1"
+        android:layout_row="3" />
+
+    <TextView
+        android:text="possibleIntent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/intentLabel"
+        android:layout_columnSpan="2"
+        android:layout_column="0"
+        android:textSize="22sp"
+        android:layout_row="4" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/intentName"
+        android:layout_column="1"
+        android:layout_row="4" />
+
+    <Button
+        android:text="Submit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/submitButton"
+        android:layout_column="0"
+        android:layout_columnSpan="2" />
+
+
+</GridLayout>
