--- a/app/src/main/res/layout/fragment_build.xml
+++ b/app/src/main/res/layout/fragment_build.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rnb.install.buildcalculator.BuildFragment">
+    tools:context="com.rnb.install.buildcalculator.BuildFragment"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <!-- Create ListView -->
