Finished the functionality of listview fragment and added an animation

--- a/app/src/main/res/layout/fragment_build.xml
+++ b/app/src/main/res/layout/fragment_build.xml
@@ -6,12 +6,12 @@
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
-    <!-- Create ListView -->
+    <!-- Create ListView and add an animation -->
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/buildslist">
-        <!-- add an animation here eventually -->
+        android:id="@+id/buildslist"
+        android:layoutAnimation="@anim/card_layout_animation">
 
     </ListView>
 
