--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,5 +7,27 @@
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
+    <!-- 2 Textviews that acts as a title and a fitting image  -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Build Calculator"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:textColor="@color/colorPrimary" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="57dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Damage Calculator for your character build"
+        android:id="@+id/textView3"
+        android:gravity="center_vertical|center_horizontal"
+        android:textStyle="bold|italic" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/game"
+        android:id="@+id/imageView2" />
 </LinearLayout>
