--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,11 @@
             android:id="@+id/nav_send"
             android:icon="@drawable/ic_email_black_24dp"
             android:title="Contact" />
+
+        <item
+            android:id="@+id/nav_search"
+            android:icon="@drawable/ic_public_black_24dp"
+            android:title="Look up builds" />
     </group>
 
 
