--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,8 +26,12 @@
 
         <item
             android:id="@+id/nav_search"
-            android:icon="@drawable/ic_public_black_24dp"
+            android:icon="@drawable/ic_cloud_upload_black_24dp"
             android:title="Look up builds" />
+        <item
+            android:id="@+id/nav_web"
+            android:icon="@drawable/ic_public_black_24dp"
+            android:title="Our Website" />
     </group>
 
 
