--- a/app/src/main/res/layout/fragment_create_build.xml
+++ b/app/src/main/res/layout/fragment_create_build.xml
@@ -26,78 +26,56 @@
         android:layout_row="0" />
 
     <TextView
+        android:text="Class"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/classLabel"
+        android:layout_column="0"
+        android:textSize="22sp"
+        android:layout_row="1" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/className" />
+
+    <TextView
         android:text="Weapon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/weaponLabel"
         android:layout_column="0"
         android:textSize="22sp"
-        android:layout_row="1" />
+        android:layout_row="2" />
 
-    <EditText
-        android:layout_width="wrap_content"
+    <Spinner
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/weaponName"
-        android:layout_column="1"
-        android:layout_row="1" />
+        android:id="@+id/weaponName" />
 
     <TextView
         android:text="Gear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gearLabel"
-        android:layout_column="0"
-        android:textSize="22sp"
-        android:layout_row="2" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/gearName"
-        android:layout_column="1"
-        android:layout_row="2" />
-
-    <TextView
-        android:text="PLACEHOLDER"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/placeholderLabel"
         android:layout_columnSpan="1"
         android:layout_column="0"
         android:textSize="22sp"
         android:layout_row="3" />
 
-    <EditText
-        android:layout_width="wrap_content"
+    <Spinner
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="numberSigned|numberDecimal"
-        android:ems="10"
-        android:id="@+id/placeholderName"
-        android:layout_column="1"
-        android:layout_row="3" />
-
-    <TextView
-        android:text="possibleIntent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/intentLabel"
-        android:layout_columnSpan="2"
-        android:layout_column="0"
-        android:textSize="22sp"
-        android:layout_row="4" />
+        android:id="@+id/gearName" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/intentName"
+        android:id="@+id/gearName"
         android:layout_column="1"
-        android:layout_row="4" />
+        android:layout_row="3"
+        android:inputType="textPersonName" />
 
     <Button
         android:text="Submit"
