--- a/app/src/main/res/layout/fragment_create_build.xml
+++ b/app/src/main/res/layout/fragment_create_build.xml
@@ -32,8 +32,9 @@
         android:id="@+id/weaponLabel"
         android:layout_column="0"
         android:textSize="22sp"
-        android:layout_row="1" />
+        android:layout_row="1"/>
 
+    <!--
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,6 +43,12 @@
         android:id="@+id/weaponName"
         android:layout_column="1"
         android:layout_row="1" />
+        -->
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/weaponSpinner"/>
 
     <TextView
         android:text="Gear"
@@ -50,8 +57,9 @@
         android:id="@+id/gearLabel"
         android:layout_column="0"
         android:textSize="22sp"
-        android:layout_row="2" />
+        android:layout_row="2"/>
 
+    <!--
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,44 +68,12 @@
         android:id="@+id/gearName"
         android:layout_column="1"
         android:layout_row="2" />
+        -->
 
-    <TextView
-        android:text="PLACEHOLDER"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/placeholderLabel"
-        android:layout_columnSpan="1"
-        android:layout_column="0"
-        android:textSize="22sp"
-        android:layout_row="3" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="numberSigned|numberDecimal"
-        android:ems="10"
-        android:id="@+id/placeholderName"
-        android:layout_column="1"
-        android:layout_row="3" />
-
-    <TextView
-        android:text="possibleIntent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/intentLabel"
-        android:layout_columnSpan="2"
-        android:layout_column="0"
-        android:textSize="22sp"
-        android:layout_row="4" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/intentName"
-        android:layout_column="1"
-        android:layout_row="4" />
+        android:id="@+id/gearSpinner" />
 
     <Button
         android:text="Submit"
