--- a/app/src/main/res/layout/fragment_create_build.xml
+++ b/app/src/main/res/layout/fragment_create_build.xml
@@ -6,7 +6,9 @@
     android:useDefaultMargins="true"
     tools:context="com.rnb.install.buildcalculator.CreateBuildFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- TODO: Update blank fragment layout
+         Created by Blaze -->
+
     <TextView
         android:text="Name"
         android:layout_width="wrap_content"
@@ -35,18 +37,6 @@
         android:layout_row="1"/>
 
 
-
-    <!--
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:id="@+id/weaponName"
-        android:layout_column="1"
-        android:layout_row="1" />
-        -->
-
     <Spinner
         android:layout_height="wrap_content"
         android:id="@+id/weaponSpinner"
@@ -61,8 +51,6 @@
         android:layout_column="0"
         android:textSize="22sp"
         android:layout_row="2"/>
-
-
 
 
     <Spinner
