--- a/app/src/main/res/layout/fragment_class_content.xml
+++ b/app/src/main/res/layout/fragment_class_content.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.rnb.install.buildcalculator.ClassContentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
 
     <!-- adding a viewpager to the fragment -->
     <android.support.v4.view.ViewPager
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:id="@+id/classcontent">
     </android.support.v4.view.ViewPager>
-
+    <!-- adding in image button and goes through classes -->
     <ImageButton
         android:layout_width="38dp"
         android:layout_height="108dp"
