--- a/app/src/main/res/layout/fragment_damage_calculator.xml
+++ b/app/src/main/res/layout/fragment_damage_calculator.xml
@@ -6,7 +6,7 @@
     tools:context="com.rnb.install.buildcalculator.DamageCalculator"
     android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
+    <!-- Creating gridlayout with spinners to select classes , weapon and gear -->
 
     <GridLayout
         android:layout_width="match_parent"
@@ -53,6 +53,7 @@
         android:layout_width="193dp" />
 
     </GridLayout>
+    <!--creating buttons to calculate and reset the calculator-->
 <LinearLayout
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -70,7 +71,7 @@
         android:id="@+id/resetButton" />
 </LinearLayout>
 
-
+    <!--creating textviews in a gridlayout to output the calculations -->
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
