--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -38,7 +38,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/build"
-            android:textStyle="normal|italic"/>
+            android:textStyle="normal|italic"
+            android:gravity="center_vertical|center_horizontal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/gearChoice"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical|center_horizontal" />
 
         <LinearLayout
             android:layout_width="match_parent"
