--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="sample_preference">
-        <item>Small</item>
-        <item>Medium</item>
-        <item>Large</item>
+    <string-array name="labels_list_preference">
+        <item>Custom Light Theme</item>
+        <item>Custom Dark Theme</item>
     </string-array>
-    <string-array name="sample_preference_value">
-        <item>10</item>
-        <item>16</item>
-        <item>22</item>
+
+    <string-array name="values_list_preference">
+        <item>1</item>
+        <item>2</item>
     </string-array>
-    <string-array name="preferences" />
+
 
 </resources>
