--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -9,4 +9,9 @@
         android:key="list_preference"
         android:summary="Set theme preference"
         android:title="Theme Preference" />
+    <ListPreference
+        android:dialogTitle="Credits"
+        android:entries="@array/credit"
+        android:summary="Credits attributed to where we get our images"
+        android:title="Credits" />
 </PreferenceScreen>
