App not crashing but preference still showing radio button thats uneeded ?

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -12,6 +12,7 @@
     <ListPreference
         android:dialogTitle="Credits"
         android:entries="@array/credit"
+        android:entryValues="@array/credit"
         android:summary="Credits attributed to where we get our images"
         android:title="Credits" />
 </PreferenceScreen>
