--- a/app/src/main/res/layout/fragment_damage_calculator.xml
+++ b/app/src/main/res/layout/fragment_damage_calculator.xml
@@ -22,11 +22,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/buildSpinner" />
+    <LinearLayout
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
-    =======
->>>>>>> staging
+        <Button
+            android:text="Calculate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/calculateButton"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+
     <!--creating textviews in a gridlayout to output the calculations -->
+
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Physical Damage Gain:"
+                android:text="Damage Gain:"
                 android:id="@+id/physDmg"
                 android:paddingTop="20dp"
                 android:textStyle="bold"
@@ -52,7 +64,7 @@
                 android:layout_width="144dp"
                 android:layout_height="match_parent"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/physDmgGain"
+                android:id="@+id/dmgGain"
                 android:hint="0"
                 android:gravity="center_vertical|center_horizontal"
                 android:textAlignment="gravity" />
