Added in a class spinner , changed viewPager title text size and layout, got build calculator to grab the right items

--- a/app/src/main/res/layout/fragment_class.xml
+++ b/app/src/main/res/layout/fragment_class.xml
@@ -10,9 +10,11 @@
 
     <!--adding in textviews for the class title and description and images for imageview -->
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title" />
+        android:id="@+id/title"
+        android:gravity="center_vertical|center_horizontal"
+        android:textSize="20sp" />
 
 
     <ImageView
