--- a/app/src/main/res/layout/fragment_create_build.xml
+++ b/app/src/main/res/layout/fragment_create_build.xml
@@ -26,12 +26,12 @@
         android:id="@+id/buildName"
         android:layout_column="1"
         android:layout_row="0" />
-
     <TextView
-        android:text="Weapon"
+        android:text="Class"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/weaponLabel"
+        android:id="@+id/classLabel"
+        android:entries="@array/class_arrays"
         android:layout_column="0"
         android:textSize="22sp"
         android:layout_row="1"/>
@@ -39,10 +39,20 @@
 
     <Spinner
         android:layout_height="wrap_content"
+        android:id="@+id/classSpinner"
+        android:layout_width="244dp" />
+    <TextView
+        android:text="Weapon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/weaponLabel"
+        android:layout_column="0"
+        android:textSize="22sp"
+        android:layout_row="2"/>
+    <Spinner
+        android:layout_height="wrap_content"
         android:id="@+id/weaponSpinner"
         android:layout_width="244dp" />
-
-
     <TextView
         android:text="Gear"
         android:layout_width="wrap_content"
@@ -50,7 +60,7 @@
         android:id="@+id/gearLabel"
         android:layout_column="0"
         android:textSize="22sp"
-        android:layout_row="2"/>
+        android:layout_row="3"/>
 
 
     <Spinner
@@ -66,6 +76,8 @@
         android:id="@+id/submitButton"
         android:layout_column="0"
         android:layout_columnSpan="2" />
+
+
 
 
 </GridLayout>
